# GitHub-issue-manager

./: .gitignore  README.md  package-lock.json  package.json
Frontend/issuemanager/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js
Frontend/issuemanager/components/: Login.js
Frontend/issuemanager/pages/: Login.js  _app.tsx  index.tsx
Frontend/issuemanager/pages/api/auth/: [...nextauth].js
Frontend/issuemanager/styles/: globals.css
app/: Cargo.toml
app/middleware/: Cargo.toml  docker-compose.yaml  query.graphql  schema.graphql  status.graphql
app/middleware/migrations/: 2022082595612_githubissuemanager.up.sql
app/middleware/src/: error.rs  graphql.rs  issue.rs  lib.rs  pagination.rs  routine.rs  search.rs  status.rs
app/server/: Cargo.toml
gi-cli/: Cargo.toml
gi-cli/src/: action.rs  cli.rs  cluster.rs  control.rs  error.rs  instruct.rs  main.rs  minikube.rs  modes.rs  namespace.rs  output.rs  yaml.rs
k8s/database/: postgresdb-configmap.yaml  postgresdb-service.yaml  postgresdb-statefulset.yaml
k8s/persistence/: githubissuemanager-persistentvolume.yaml
k8s/server/: server-deployment.yaml  server-service.yaml  server-side-networkpolicy.yaml
k8s/setting/: githubissuemanager-client-side-networkpolicy.yaml  githubissuemanager-ingress.yaml  githubissuemanager-persistentvolumeclaim.yaml
k8s/website/: website-deployment.yaml  website-service.yaml
