[package]
name = "gi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
async-process = "1.4.0"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
futures-lite = "1.12.0"
