[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
derive_more = "0.99.17"
actix-web-grants = "3.0.1"
actix-web-httpauth = "0.6.0"
middleware = { path = "../middleware" }
